--- a/week1fiber/my-app/src/App.css
+++ b/week1fiber/my-app/src/App.css
@@ -38,8 +38,37 @@
   }
 }
 
+/*---new---*/
+
 #canvas-container {
   width: 100%;
   height: 100vh;
   /* background-color: yellow; */
+  z-index: -1;
+  /* pointer-events: none; */
+}
+
+.ui-cat,
+.ui-flower {
+  /* background-color: orange; */
+  border-radius: 10px;
+  width: 6rem;
+  cursor: pointer;
+  height: 2rem;
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: aquamarine;
+  border: 5px solid aquamarine;
+  cursor: pointer;
+
+
+  z-index: 10;
+  position: absolute;
+}
+
+.ui-cat {
+
+  left: 50%;
 }
